# MSFS-C-17

./: .eslint.cjs  .eslintrc.cjs  .gitignore  .prettierrc  C-17.xml  README.md  aa.simvars  infinity.json  mach.config.js  package-lock.json  package.json  tsconfig.json
.ace/: canvas.json  project.json  simvars.json
Camera/: F-22.xml  Test - Copy.xml  Test.xml
PackageDefinitions/: DeltaSimulations-c17.xml
PackageDefinitions/DeltaSimulations-c17/: Business.json  ReleaseNotes.xml
PackageSources/CopyFiles/: SwapPanelFiles.bat  infinity.json  panel.cfg
PackageSources/Effects/: fx_C17BeaconTop.fx  fx_C17CargoBay.fx  fx_C17CargoBayRed.fx  fx_C17CmpassLGT.fx  fx_C17CpitSpot.fx  fx_C17Dome.fx  fx_C17FloodAR.fx  fx_C17GaugeSmall.fx  fx_C17Glareshield.fx  fx_C17Landing.fx  fx_C17LandingFuse.fx  fx_C17NavWhite.fx  fx_C17OHFlood.fx  fx_C17SlimeLight.fx  fx_C17Staging.fx  fx_C17Staircase.fx  fx_C17StrobeDouble.fx  fx_C17StrobeSingle.fx  fx_C17UARRSI.fx  fx_C17_MultiPlayer_Ghost.fx
Systems/wasm/: Cargo.toml
Systems/wasm/src/: lib.rs
bundles/C17EFB/: bundle.css  bundle.js
bundles/EFB/: build_meta.json  bundle.css  bundle.js
bundles/HUD/: build_meta.json  bundle.css  bundle.js
bundles/LegacyHUD/: bundle.css  bundle.js
bundles/MFD/: build_meta.json  bundle.css  bundle.js
bundles/READOUT/: build_meta.json  bundle.css  bundle.js
bundles/Systems/: build_meta.json  bundle.css  bundle.js
src/C17CargoDropProject/: AIObjects.cpp  AIObjects.sln  AIObjects.vcxproj  AIObjects.vcxproj.filters  SimConnectClient.props
src/DeltaSim_WASM/: DeltaSim_WASM.cpp  Map.cpp  (+4 more)
(+641 files in other folders)
