[package]
name = "c-17-systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
msfs = { git = "https://github.com/Tacotakedown/msfs-rs", branch = "main" }
uom = "=0.35.0"